fix collapse with LI for equip

--- a/kasa/src/css/Collapse.css
+++ b/kasa/src/css/Collapse.css
@@ -1,7 +1,6 @@
 
 .collapse-container {
-    margin-left:12.5%;
-    width: 75%; /*582px;*/
+    width: 38%; /*582px;*/
     min-height: 52px;
     border-radius: 10px;
     display: flex;
@@ -34,15 +33,16 @@
 .chevron{
     color: #FFF;
     font-size: 2em;
-    margin-right: 10px
+    margin-right: 10px;
 }
 
-.title {
-    margin-left: 20px
+.collapse-container .title {
+    margin-left: 20px;
+    margin-bottom:35px;
 }
 
-.title, .collapse-content {
-    font-size: 1.13em /*18px*/
+.collapse-container .title, .collapse-content {
+    font-size: 1.13em; /*18px*/
 }
 
 .collapse-content {
@@ -52,5 +52,5 @@
     height: 90%;
     border-radius: 0 0 25px 25px;
     margin: 0;
-    padding: 70px 5px 30px 20px
+    padding: 70px 5px 30px 20px;
 }
