--- a/kasa/src/css/Logement.css
+++ b/kasa/src/css/Logement.css
@@ -15,8 +15,7 @@
 
 .title {
   color: #FF6060;
-
-  font-size: 2.25em; /*36px*/
+  font-size: 24px; 
   margin-bottom: 0;
   margin-top: 35px
 }
@@ -35,6 +34,12 @@
 }
 
 .top {
-  width: 79%
+  width: 80%
 }
 
+.texts {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  position: relative
+}
