--- a/kasa/src/css/Slideshow.css
+++ b/kasa/src/css/Slideshow.css
@@ -26,7 +26,8 @@
     font-size: 5em;
     justify-content: space-between;
     position: absolute;
-    top: 150.7px
+    top: 150.7px;
+    color: white;
 }
 
 .arrow_nxt:hover, .arrow_bck:hover {
@@ -40,7 +41,7 @@
 }
 
 .counter {
-    color: #000000;
+    color: white;
     position: absolute;
     bottom: 0
 }
